# Frost-GO

./: .gitignore  README.md  main.py  performance_test.py  pyproject.toml  run.py
.github/workflows/: lint  test.yml
config/: database.py  env.py
crawler/: crawler.py
env/: .env.example
general/: constants.py  createDirectory.py  create_directory.py  cursorDeserialize.py  cursor_deserialize.py  parse_robot_txt.py
models/: crawled.py  queue.py
routes/: __init__.py  routes.py
setup/: setup.py
tests/generals/: test_parse_robot_txt.py
tests/models/: queue_test.py  test_queue.py
