[tool.poetry]
name = "frost-go"
version = "1.1.1"
description = "Frost GO is a search engine api made using python"
authors = ["SwordKingIBK <ibukunoluwa.adetoba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pymongo = "^4.7.3"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
mypy = "^1.10.0"
black = "^24.4.2"
pylint = { extras = ["spelling"], version = "^3.2.3" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "private/"


[tool.pylint.MASTER]
ignore-paths = ["^private/.*$"]
disable = ["C0114", "C0115", "C0116"]
